tests/baselines/reference/es6ExportAll.errors.txt
server.ts(5,8): error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
server.ts(9,8): error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.


==== server.ts (2 errors) ====
    export class c {
    }
    export interface i {
    }
    export module m {
           ~~~~~~
!!! error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
        export var x = 10;
    }
    export var x = 10;
    export module uninstantiated {
           ~~~~~~
!!! error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
    }
    
==== client.ts (0 errors) ====
    export * from "server";